kubernetes/apps/streamflow/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamflow
  namespace: media
spec:
  selector:
    matchLabels:
      app: streamflow
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: streamflow
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
      containers:
        - name: streamflow
          image: ghcr.io/krinkuto11/streamflow:2.6.0@sha256:541f1f4beb77296c660ed48c669057cc55a29b39b6735ebdf9ac9795dcc3ee5c
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 568
            runAsGroup: 568
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              memory: 256Mi
          ports:
            - name: main
              containerPort: 5000
          volumeMounts:
            - mountPath: /app/data
              name: data
            - mountPath: /tmp
              name: tmp
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: streamflow-data
        - name: tmp
          emptyDir: {}
