kubernetes/apps/streamflow/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamflow
  namespace: media
spec:
  selector:
    app: streamflow
  ports:
    - name: main
      port: 5000
      targetPort: 5000
